# P8-pret-a-depenser-scoring-api

./: .gitignore  Dockerfile  README.md  app_monitoring.py  drift_report_temp.html  pyproject.toml  simulate_requests.py
.github/workflows/: ci.yml
api/: clients_dummy.json  main.py
docs/: drift_report.html
tests/: test_api.py
